# unix-utils-rs

./: Cargo.toml  README.md
cat/: Cargo.toml
cat/src/: main.rs
echo/: Cargo.toml
echo/src/: main.rs
ls/: Cargo.toml
ls/src/: main.rs
netcat/: Cargo.toml
seq/: Cargo.toml
strings/: Cargo.toml
wc/: Cargo.toml
wc/src/: main.rs
yes/: Cargo.toml
