[package]
name = "unix-utils"
version = "0.1.0"
authors = ["maxcohn <maxc4321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = true } #maybe change to false??
#TODO: remove in favor for the above StructOpt
clap = "2.33.0"
